--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@ const wondersData = [
     continent: 'Asia',
     era: 'Kuno',
     year: '± 700 SM – 1600 M',
-    image: 'tembok-besar-tiongkok.png',
+    image:'img/tembok-besar-tiongkok.png'
+',
     summary:
       'Sistem benteng dan dinding pertahanan yang dibangun oleh berbagai dinasti di Tiongkok untuk melindungi wilayah dari serangan bangsa-bangsa nomaden.',
     tags: ['Benteng pertahanan', 'Warisan militer'],
@@ -524,7 +525,7 @@ const wondersData = [
     continent: 'Asia',
     era: 'Kuno',
     year: '± Abad ke-6 SM',
-    image: 'petra.webp',
+    image: 'img/petra.webp',
     summary:
       'Kota batu kuno yang diukir langsung pada tebing batu merah muda, pernah menjadi pusat perdagangan penting kerajaan Nabatea.',
     tags: ['Kota batu', 'Perdagangan'],
@@ -543,7 +544,7 @@ const wondersData = [
     continent: 'Eropa',
     era: 'Kuno',
     year: 'Abad ke-1 M',
-    image: 'koloseum.jpg',
+    image: 'img/koloseum.jpg',
     summary:
       'Amfiteater raksasa di pusat Kota Roma yang digunakan untuk pertarungan gladiator dan hiburan lainnya pada masa Kekaisaran Romawi.',
     tags: ['Amfiteater', 'Gladiator'],
@@ -562,7 +563,7 @@ const wondersData = [
     continent: 'Amerika Utara',
     era: 'Kuno',
     year: '± Abad ke-6 – 12 M',
-    image: 'chichen_Itza.jpg',
+    image: 'img/chichen_Itza.jpg',
     summary:
       'Kota kuno peradaban Maya yang terkenal dengan piramida Kukulkan dan struktur yang mencerminkan pengetahuan astronomi.',
     tags: ['Peradaban Maya', 'Astronomi'],
@@ -581,7 +582,7 @@ const wondersData = [
     continent: 'Amerika Selatan',
     era: 'Abad Pertengahan',
     year: 'Abad ke-15',
-    image: 'machu-picchu.jpg',
+    image: 'img/machu-picchu.jpg',
     summary:
       'Kota Inca di puncak pegunungan dengan pemandangan dramatis, diduga sebagai situs keagamaan atau tempat peristirahatan kerajaan.',
     tags: ['Peradaban Inca', 'Pegunungan'],
@@ -600,7 +601,7 @@ const wondersData = [
     continent: 'Asia',
     era: 'Modern Awal',
     year: 'Abad ke-17',
-    image: 'taj-mahal.webp',
+    image: 'img/taj-mahal.webp',
     summary:
       'Mausoleum marmer putih yang dibangun Kaisar Shah Jahan untuk mengenang istrinya, Mumtaz Mahal.',
     tags: ['Mausoleum', 'Arsitektur Mughal'],
@@ -619,7 +620,7 @@ const wondersData = [
     continent: 'Amerika Selatan',
     era: 'Modern Awal',
     year: 'Abad ke-20 (1931)',  
-    image: 'patung-kristus.jpg',
+    image: 'img/patung-kristus.jpg',
     summary:
       'Patung Yesus setinggi 30 meter dengan tangan terentang di puncak Gunung Corcovado.',
     tags: ['Patung raksasa', 'Ikon kota'],
