--- a/index.html
+++ b/index.html
@@ -1042,6 +1042,6 @@ document.addEventListener('DOMContentLoaded', () => {
   observeReveals();
   renderQuizQuestion();
 });
-  </script>
+<script src="pweb1/script.js"></script>
 </body>
 </html>
