--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ const wondersData = [
     continent: 'Asia',
     era: 'Kuno',
     year: '± 700 SM – 1600 M',
-  image: 'pweb1/tembok-besar-tiongkok.png'
+  image: 'pweb1/tembok-besar-tiongkok.png',
     summary:
       'Sistem benteng dan dinding pertahanan yang dibangun oleh berbagai dinasti di Tiongkok untuk melindungi wilayah dari serangan bangsa-bangsa nomaden.',
     tags: ['Benteng pertahanan', 'Warisan militer'],
