--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="hero-visual">
 <div class="hero-image-wrapper">
   <img
-    src="taj-mahal.webp"  
+    src='pweb1/taj-mahal.webp', 
     alt="Taj Mahal"
     class="hero-image"
   />
